# swagger-docker/dist/swagger.json
@@ -46,13 +46,13 @@
           "200" : {
             "description" : "successful operation",
             "schema" : {
-              "$ref" : "#/definitions/DefaultOutputDTO"
+              "$ref" : "#/definitions/OrderOutputDTO"
             }
           },
           "201" : {
             "description" : "Order successfully saved",
             "schema" : {
-              "$ref" : "#/definitions/DefaultOutputDTO"
+              "$ref" : "#/definitions/OrderOutputDTO"
             }
           },
           "400" : {
@@ -101,6 +101,43 @@
         }
       }
     },
+    "/api/order/refund/{order-id}" : {
+      "post" : {
+        "tags" : [ "Order Services" ],
+        "summary" : "",
+        "description" : "Refund order",
+        "operationId" : "refundOrder",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "order-id",
+          "in" : "path",
+          "description" : "Order Id",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Order successfully refunded",
+            "schema" : {
+              "$ref" : "#/definitions/MessageDTO"
+            }
+          },
+          "403" : {
+            "description" : "Order not allowed to be refunded",
+            "schema" : {
+              "$ref" : "#/definitions/MessageDTO"
+            }
+          },
+          "404" : {
+            "description" : "The order id was not found",
+            "schema" : {
+              "$ref" : "#/definitions/ErrorDTO"
+            }
+          }
+        }
+      }
+    },
     "/api/payment" : {
       "post" : {
         "tags" : [ "Payment Services" ],
@@ -121,13 +158,13 @@
           "200" : {
             "description" : "successful operation",
             "schema" : {
-              "$ref" : "#/definitions/DefaultOutputDTO"
+              "$ref" : "#/definitions/PaymentOutputDTO"
             }
           },
           "201" : {
             "description" : "Payment successfully saved",
             "schema" : {
-              "$ref" : "#/definitions/DefaultOutputDTO"
+              "$ref" : "#/definitions/PaymentOutputDTO"
             }
           }
         }
@@ -291,19 +328,18 @@
     }
   },
   "definitions" : {
-    "DefaultOutputDTO" : {
-      "type" : "object",
-      "properties" : {
-        "id" : {
-          "type" : "integer",
-          "format" : "int64"
-        }
-      }
-    },
     "ErrorDTO" : {
       "type" : "object",
       "properties" : {
         "error" : {
+          "type" : "string"
+        }
+      }
+    },
+    "MessageDTO" : {
+      "type" : "object",
+      "properties" : {
+        "message" : {
           "type" : "string"
         }
       }
@@ -354,6 +390,22 @@
         }
       }
     },
+    "OrderItemOutputDTO" : {
+      "type" : "object",
+      "properties" : {
+        "description" : {
+          "type" : "string"
+        },
+        "unitPrice" : {
+          "type" : "number",
+          "format" : "float"
+        },
+        "quantity" : {
+          "type" : "integer",
+          "format" : "int32"
+        }
+      }
+    },
     "OrderOutputDTO" : {
       "type" : "object",
       "properties" : {
@@ -373,12 +425,43 @@
         },
         "status" : {
           "type" : "string"
+        },
+        "items" : {
+          "type" : "array",
+          "items" : {
+            "$ref" : "#/definitions/OrderItemOutputDTO"
+          }
         }
       }
     },
     "PaymentInputDTO" : {
       "type" : "object",
       "properties" : {
+        "orderId" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "status" : {
+          "type" : "string",
+          "enum" : [ "CANCELED_REVERSAL", "COMPLETED", "CREATED", "DENIED", "EXPIRED", "FAILED", "PENDING", "REFUNDED", "REVERSED", "PROCESSED", "VOIDED" ]
+        },
+        "creditCardNumber" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "paymentDate" : {
+          "type" : "string",
+          "format" : "date-time"
+        }
+      }
+    },
+    "PaymentOutputDTO" : {
+      "type" : "object",
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
         "orderId" : {
           "type" : "integer",
           "format" : "int64"
